- Edit menu now shows: Undo, Cut, Copy, Paste, Select All, Delete, Copy Title, Copy Path
- Copy menu item changes to "Copy YouTube URL" when ListView has focus
- Disable Undo, Cut, Paste when ListView has focus
- Disable Delete, Copy Title, Copy Path when ListView does not have focus
- Enable/disable menu items based on ListView selection state
- Implement ID_LISTVIEW_COPY_TITLE handler to copy video title to clipboard
- Implement ID_LISTVIEW_COPY_PATH handler to copy file path to clipboard
- Implement ID_LISTVIEW_COPY_URL handler to copy reconstructed YouTube URL to clipboard
- Implement ID_LISTVIEW_DELETE handler to trigger delete operation via Delete button
- Fix ListView sorting to use ListView_SortItems for proper lParam handling
- Refactor Select All functionality to use new SelectAllListViewItems helper function
- Fix Edit menu to rebuild consistently on each popup to prevent item accumulation

Cache Management:
- Add GetYouTubeUrlFromVideoId helper function to reconstruct YouTube URLs from video IDs
- Add ParseDurationToSeconds helper function to convert MM:SS or HH:MM:SS format to integer seconds
- Implement CompareListViewItems callback for ListView column sorting with thread-safe cache access
- Add SortListViewByColumn function to handle sort state management and ListView sorting
- Add SelectAllListViewItems function for programmatic selection of all ListView items
- Add ListViewSortInfo structure to track sort column, direction, and cache manager reference

HiDPI Support:
- Fix DPI change handling to prevent cumulative scaling errors when moving between monitors
- Replace RescaleWindowForDPI with ResizeControls in WM_DPICHANGED handler for proper layout recalculation
- Remove manual control position scaling that caused layout drift on repeated DPI changes
- Ensure layout is always calculated fresh from window dimensions rather than scaled from previous positions

User Interface: